--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.9.1",
+    "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "cross-env": "^1.0.8",
@@ -40,6 +42,7 @@
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.1.0",
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
     "react": "^15.1.0",
